# nooxus-mcp

./: README.md  server.json
python/: README.md  pyproject.toml  test.sh
python/backup-python/: server.py-v1.bak  server.py-v2.bak  server.py-v3.bak
python/src/nooxus_mcp/: mcp-logs.txt  server.py
